# screenshoot

./: .gitignore  CMakeLists.txt  README.md  config.h  screenshoot.desktop
src/: CMakeLists.txt  capture.c  capture.h  config.h.in  main.c  preview.c  preview.h  screenshoot.c  screenshoot.h  type.h  window.c  window.h
